Tipo analisis creado exitosamente